[project]
name = "canva"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "flask>=2.0.0",
    "google-adk>=1.6.1",
    "langchain-community>=0.3.27",
    "pydantic>=1.8.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.25.0",
]
